@@ -1,7 +1,7 @@
 #!/usr/bin/env tclsh
 
 ############################################################################################################
-# liftoverSV 0.1.1_beta                                                                                    #
+# liftoverSV 0.1.2_beta                                                                                    #
 #                                                                                                          #
 # Copyright (C) 2024-current Veronique Geoffroy (veronique.geoffroy@inserm.fr)                             #
 #                                                                                                          #
@@ -162,6 +162,12 @@ memorizeGenomicCoordinates $tmpBEDfile $tmpBEDfileLifted
 # Write the lifted VCF
 ######################
 writeTheLiftedVCF
+
+
+
+# Sort the output file
+######################
+sortTheLiftedVCF
 
 
 
